--- a/conseptional sesson.html
+++ b/conseptional sesson.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-    <div>
-        <h1>Hello World</h1>
+    <div class="hero">
+        <h1>The Cow</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quam aliquid incidunt atque ab.</p>
     </div>
 </body>
